# software-eng-ai-2024

.github/actions/setup/: action.yml
.github/workflows/: ci.yml
ml_data_pipeline/: Dockerfile  docker-compose.yml  prometheus.yml  pyproject.toml  tasks.py
ml_data_pipeline/config/: config_dev.yaml  config_prod.yaml
ml_data_pipeline/src/ml_data_pipeline/: config.py  core.py  main.py
ml_data_pipeline/src/ml_data_pipeline/endpoints/: pipeline.py
ml_data_pipeline/src/ml_data_pipeline/models/: factory.py  tree_model.py
ml_data_pipeline/src/ml_data_pipeline/scripts/: inference_batch.py  train_batch.py
ml_data_pipeline/tests/: test_model.py
notebooks/: 1-initial_poc.ipynb  2-experiment_tracking.ipynb  3-parameter-finetuning.ipynb  4-model_management-solution.ipynb  4-model_management.ipynb  5-model_registry-solution.ipynb  5-model_registry.ipynb
template_project/: pyproject.toml
template_project/src/template_project/examples/: pydantic_example.py
