[tool.poetry]
name = "template-project"
version = "0.1.0"
description = ""
authors = ["najielhachem <nagielhachem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pandera = "^0.20.4"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
